# GeneticAlgorithmPyRS

./: .gitignore  Cargo.toml  README.md  install.sh  setup.py
genetic_algorithm_py_rs/: __init__.py
src/: lib.rs
src/models/: gene_type.rs  intfloats.rs  mod.rs
test/: test1.py
