[package]
name = "genetic_algorithm_py_rs"
version = "0.1.0"
edition = "2021"
authors=["Phosphorus <fernando.npd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.18.1"
numpy = "0.18"
rand = "0.8.5"

[lib]
name = "genetic_algorithm_py_rs"
crate-type = ["cdylib"]